# cnapp-module-2-application-christopher

./: .release-please-manifest.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-push-azure.yml  build-and-push-ghcr.yml  build-and-push.yml  deploy.yml  license-review.yml  publish.yml  pull-request.yml
backend/: CHANGELOG.md  Dockerfile  pyproject.toml
backend/app/: main.py
bootstrap/github-oidc/: main.tf
frontend/: .npmrc  CHANGELOG.md  package-lock.json  package.json
frontend/src/: App.tsx
ort-config/: config.yml  curations.yml
policy/: npm.rego  registry.rego  semgrep.rego
